# blueprints

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  assembler.wpr  blueprints.wpr  frame_factory.wpr  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: prek.yml  tests.yml
assembler/: __init__.py  blueprint.py  constants.py  cytoscape_experiment.py  exceptions.py  experiment.py  factory.py  recipes.py  serialization.py  util.py
assembler/recipes/: base.py  general.py  static_frame.py
assembler/renderers/: dash_local_server.py  dash_renderer.py
assembler/renderers/dash_renderer/: dash_layout.py  flask_app.py  models.py
assembler/tests/: conftest.py  test_blueprint.py  test_dash_local_server.py  test_dash_viz.py  test_factory.py  test_frame_factory.py  test_recipe_json.py  test_recipes.py  test_serialization.py  test_static_frame.py  test_util.py  unloaded_module_test.py
blueprints/: __init__.py  blueprint.py  constants.py  cytoscape_experiment.py  exceptions.py  factory.py  serialization.py  util.py
blueprints/recipes/: __init__.py  base.py  general.py  static_frame.py
blueprints/renderers/: dash_local_server.py  dash_renderer.py  dash_renderer_experiment.py
blueprints/renderers/dash_renderer/: auth.py  dash_layout.py  dash_util.py  flask_app.py  local.py  models.py
blueprints/tests/: conftest.py  dash_tester.py  test_blueprint.py  test_dash_local_server.py  test_dash_viz.py  test_factory.py  test_recipe_json.py  test_recipes.py  test_static_frame.py  test_util.py
blueprints/tests/dash_renderer/: conftest.py  cytoscape_experiment.py  dash_test_client.py  dash_test_server.py  dash_tester.py  experiment.py  test_dash_local_server.py  test_dash_util.py  test_dash_viz.py  test_flask_app.py
frame_factory/: __init__.py  exceptions.py  factory.py  recipes.py  util.py
frame_factory/tests/: conftest.py  test_frame_factory.py  test_recipes.py
