[tool.mypy]
disable_error_code = [
    "call-arg",
    "override",
]
exclude = ["setup.py"]

[[tool.mypy.overrides]]
module = [
    "networkx",
    "matplotlib",
    "setuptools",
]
ignore_missing_imports = true

[tool.poetry]
name = "blueprints"
version = "0.1.0"
description = "A package for aggregating data from disparate sources"
authors = ["Tom Rutherford <tmrutherford@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
networkx = "^2.8.6"
static-frame = "^0.9.22"
frozendict = "^2.3.4"
black = "^23.3.0"
dash = "^2.14.2"
dash-cytoscape = "^0.3.0"
flask-caching = "^2.0.2"
flask-sqlalchemy = "^3.0.3"
pyjwt = "^2.7.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
static-frame = "^0.9.21"
frame-fixtures = "^0.2.1"
black = "^23.1.0"
requests = "^2.30.0"
ruff = "^0.0.290"
dash = {extras = ["testing"], version = "^2.14.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.isort]
force-single-line = true
